@@ -34,7 +34,9 @@ try:
 except ImportError:
     print('WARNING, Using slow reflectivity calculation')
     from refnx.reflect import _reflect as refcalc
+from refnx._lib import flatten
 from refnx.analysis import Parameters, Parameter, possibly_create_parameter
+from refnx.reflect.interface import Interface, Erf, Step
 
 
 class Structure(UserList):
@@ -74,11 +76,18 @@ class Structure(UserList):
     `Structure[-1].slabs()[-1]` after any possible slab order reversal. This
     slab corresponds to the scattering length density of the semi-infinite
     backing medium.
-    The profile contraction specified by the `contract` keyword can improve
-    calculation time for Structures created with microslicing (such as
-    analytical profiles). If you use this option it is recommended to check
-    the reflectivity signal with and without contraction to ensure they are
-    comparable.
+    Normally the reflectivity will be calculated using the Nevot-Croce
+    approximation for Gaussian roughness between different layers. However, if
+    individual components have non-Gaussian roughness (e.g. Tanh), then the
+    overall reflectivity and SLD profile are calculated by micro-slicing.
+    Micro-slicing involves calculating the specific SLD profile, dividing it
+    up into small-slabs, and calculating the reflectivity from those. This
+    normally takes much longer than the Nevot-Croce approximation. To speed
+    the calculation up the `Structure.contract` property can be used.
+    The profile contraction specified by this property can greatly improve
+    calculation time for Structures created with micro-slicing. If you use
+    this option it is recommended to check the reflectivity signal with and
+    without contraction to ensure they are comparable.
 
     Example
     -------
@@ -238,12 +247,24 @@ class Structure(UserList):
             raise ValueError("The first and last Components in a Structure"
                              " need to be Slabs")
 
-        sl = [c.slabs(structure=self) for c in self.components]
-        try:
-            slabs = np.concatenate(sl)
-        except ValueError:
-            # some of slabs may be None. np can't concatenate arr and None
-            slabs = np.concatenate([s for s in sl if s is not None])
+        # Each layer can be given a different type of roughness profile
+        # that defines transition between successive layers.
+        # The default interface is specified by None (= Gaussian roughness)
+        interfaces = self.interfaces
+        if all([i is None for i in interfaces]):
+            # if all the interfaces are Gaussian, then simply concatenate
+            # the default slabs property of each component.
+            sl = [c.slabs(structure=self) for c in self.components]
+
+            try:
+                slabs = np.concatenate(sl)
+            except ValueError:
+                # some of slabs may be None. np can't concatenate arr and None
+                slabs = np.concatenate([s for s in sl if s is not None])
+        else:
+            # there is a non-default interfacial roughness, create a microslab
+            # representation
+            slabs = self._micro_slabs()
 
         # if the slab representation needs to be reversed.
         if self.reverse_structure:
@@ -260,6 +281,84 @@ class Structure(UserList):
             return _contract_by_area(slabs, self.contract)
         else:
             return slabs
+
+    def _micro_slabs(self, slice_size=0.5):
+        """
+        Creates a microslab representation of the Structure.
+
+        Parameters
+        ----------
+        slice_size : float
+            Thickness of each slab in the micro-slab representation
+
+        Returns
+        -------
+        micro_slabs : np.ndarray
+            The micro-slab representation of the model. See the
+            `Structure.slabs` method for a description of the array.
+        """
+        # solvate the slabs from each component
+        sl = [c.slabs(structure=self) for c in self.components]
+        total_slabs = np.concatenate(sl)
+        total_slabs[1:-1] = self.overall_sld(total_slabs[1:-1],
+                                             self.solvent)
+
+        total_slabs[:, 0] = np.fabs(total_slabs[:, 0])
+        total_slabs[:, 3] = np.fabs(total_slabs[:, 3])
+
+        # interfaces between all the slabs
+        _interfaces = self.interfaces
+        erf_interface = Erf()
+        _interfaces = [erf_interface if i is None else i for i in _interfaces]
+
+        # distance of each interface from the fronting interface
+        dist = np.cumsum(total_slabs[:-1, 0])
+
+        # workout how much space the SLD profile should encompass
+        zstart = -5. - 8 * total_slabs[1, 3]
+        zend = 5. + dist[-1] + 8 * total_slabs[-1, 3]
+        nsteps = int((zend - zstart) / slice_size + 1)
+        zed = np.linspace(zstart, zend, num=nsteps)
+
+        # the output arrays
+        sld = np.ones_like(zed, dtype=float) * total_slabs[0, 1]
+        isld = np.ones_like(zed, dtype=float) * total_slabs[0, 2]
+
+        # work out the step in SLD at an interface
+        delta_rho = total_slabs[1:, 1] - total_slabs[:-1, 1]
+        delta_irho = total_slabs[1:, 2] - total_slabs[:-1, 2]
+
+        # the RMS roughness of each step
+        sigma = np.clip(total_slabs[1:, 3], 1e-3, None)
+
+        # accumulate the SLD of each step.
+        for i in range(len(total_slabs) - 1):
+            sld += delta_rho[i] * _interfaces[i + 1](zed,
+                                                     scale=sigma[i],
+                                                     loc=dist[i])
+            isld = delta_irho[i] * _interfaces[i + 1](zed,
+                                                      scale=sigma[i],
+                                                      loc=dist[i])
+
+        sld[0] = total_slabs[0, 1]
+        isld[0] = total_slabs[0, 2]
+        sld[-1] = total_slabs[-1, 1]
+        isld[-1] = total_slabs[-1, 2]
+
+        micro_slabs = np.zeros((len(zed), 5), float)
+        micro_slabs[:, 0] = zed[1] - zed[0]
+        micro_slabs[:, 1] = sld
+        micro_slabs[:, 2] = isld
+
+        return micro_slabs
+
+    @property
+    def interfaces(self):
+        """
+        The interfacial roughness type between each layer in `Component.slabs`.
+        These may be changed by altering the `Component.interfaces` property.
+        """
+        return list(flatten([c.interfaces for c in self.components]))
 
     @staticmethod
     def overall_sld(slabs, solvent):
@@ -302,6 +401,18 @@ class Structure(UserList):
             module. The option is ignored if using the pure python calculator,
             ``_reflect``. If `threads == 0` then all available processors are
             used.
+
+        Notes
+        -----
+        Normally the reflectivity will be calculated using the Nevot-Croce
+        approximation for Gaussian roughness between different layers. However,
+        if individual components have non-Gaussian roughness (e.g. Tanh), then
+        the overall reflectivity and SLD profile are calculated by
+        micro-slicing. Micro-slicing involves calculating the specific SLD
+        profile, dividing it up into small-slabs, and calculating the
+        reflectivity from those. This normally takes much longer than the
+        Nevot-Croce approximation. To speed the calculation up the
+        `Structure.contract` property can be used.
         """
         return refcalc.abeles(q, self.slabs()[..., :4], threads=threads)
 
@@ -595,9 +706,20 @@ class Component(object):
     """
     A base class for describing the structure of a subset of an interface.
 
+    Parameters
+    ----------
+    name : str, optional
+        The name associated with the Component
+
+    Notes
+    -----
+    By setting the `Component.interfaces` property one can control the
+    type of interfacial roughness between all the layers of an interfacial
+    profile.
     """
-    def __init__(self):
-        self.name = ''
+    def __init__(self, name=''):
+        self.name = name
+        self._interfaces = None
 
     def __or__(self, other):
         """
@@ -636,6 +758,38 @@ class Component(object):
         """
         raise NotImplementedError("A component should override the parameters "
                                   "property")
+
+    @property
+    def interfaces(self):
+        """
+        The interfacial roughness type between each layer in `Component.slabs`.
+        Should be one of {None, :class:`Interface`, or sequence of
+        :class:`Interface`}.
+        """
+        return self._interfaces
+
+    @interfaces.setter
+    def interfaces(self, interfaces):
+        n_slabs = len(self.slabs())
+
+        if interfaces is None:
+            self._interfaces = [None] * n_slabs
+            return
+
+        if isinstance(interfaces, Interface):
+            self._interfaces = [interfaces] * n_slabs
+            return
+
+        # this will raise TypeError is interfaces is not iterable
+        _interfaces = [i for i in interfaces if isinstance(i, Interface)]
+
+        if len(_interfaces) == n_slabs:
+            self._interfaces = _interfaces
+        else:
+            raise ValueError("Interface property must be set with one of:"
+                             " {None, Interface, sequence of Interface. If a"
+                             " sequence is provided it must have the same"
+                             " length as `Component.slabs`.")
 
     def slabs(self, structure=None):
         """
@@ -699,11 +853,14 @@ class Slab(Component):
         Name of this slab
     vfsolv : refnx.analysis.Parameter or float
         Volume fraction of solvent [0, 1]
-
+    interface : {:class:`Interface`, None}, optional
+        The type of interfacial roughness associated with the Slab.
+        If `None`, then the default interfacial roughness is an Error
+        function (also known as Gaussian roughness).
     """
 
-    def __init__(self, thick, sld, rough, name='', vfsolv=0):
-        super(Slab, self).__init__()
+    def __init__(self, thick, sld, rough, name='', vfsolv=0, interface=None):
+        super(Slab, self).__init__(name=name)
         self.thick = possibly_create_parameter(thick,
                                                name='%s - thick' % name)
         if isinstance(sld, SLD):
@@ -715,13 +872,13 @@ class Slab(Component):
         self.vfsolv = (
             possibly_create_parameter(vfsolv,
                                       name='%s - volfrac solvent' % name))
-        self.name = name
 
         p = Parameters(name=self.name)
         p.extend([self.thick, self.sld.real, self.sld.imag,
                   self.rough, self.vfsolv])
 
         self._parameters = p
+        self.interfaces = interface
 
     def __repr__(self):
         return ("Slab({thick!r}, {sld!r}, {rough!r},"
@@ -756,7 +913,7 @@ class Slab(Component):
                                        self.vfsolv.value]))
 
 
-class Stack(UserList, Component):
+class Stack(Component, UserList):
     r"""
     A series of Components to be considered as one. When part of a Structure
     the Stack can represent a multilayer by setting the `repeats` attribute.
@@ -786,9 +943,9 @@ class Stack(UserList, Component):
     Structure.
     """
     def __init__(self, components=(), name='', repeats=1):
-        super(Stack, self).__init__()
+        Component.__init__(self, name=name)
+        UserList.__init__(self)  # explicit calls without super
 
-        self.name = name
         self.repeats = possibly_create_parameter(repeats, 'repeats')
         self.repeats.bounds.lb = 1
 
@@ -870,6 +1027,23 @@ class Stack(UserList, Component):
             delattr(self, 'solvent')
 
         return slabs
+
+    def _interfaces_get(self):
+        repeats = round(abs(self.repeats.value))
+        interfaces = list(flatten([i.interfaces for i in self.data]))
+
+        if repeats > 1:
+            interfaces = interfaces * repeats
+
+        return interfaces
+
+    def _interfaces_set(self, interfaces):
+        raise RuntimeError("Cannot set interfaces property for a Stack"
+                           " Component. Please set the interfaces property"
+                           " for the constituent Components.")
+
+    # override the interfaces property for this subclass
+    interfaces = property(_interfaces_get, _interfaces_set)
 
     @property
     def components(self):
@@ -1025,12 +1199,18 @@ def sld_profile(slabs, z=None):
 
     # work out the step in SLD at an interface
     delta_rho = layers[1:, 1] - layers[:-1, 1]
-    # the roughness of each step
-    sigma = np.clip(layers[1:, 3], 1e-3, None)
+
+    # use erf for roughness function, but step if the roughness is zero
+    step_f = Step()
+    erf_f = Erf()
+    sigma = layers[1:, 3]
 
     # accumulate the SLD of each step.
     for i in range(nlayers + 1):
-        sld += delta_rho[i] * norm.cdf(zed, scale=sigma[i], loc=dist[i])
+        f = erf_f
+        if sigma[i] == 0:
+            f = step_f
+        sld += delta_rho[i] * f(zed, scale=sigma[i], loc=dist[i])
 
     return zed, sld
 
